Finalised non-Docker install steps